[package]
name = "ubiquitous-disco"
version = "0.1.0"
authors = ["kouki <kouki@localhost>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
#selenium-rs = "0.1.2"
thirtyfour = "0.25.1"
tokio = "1.7.1"
